--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,9 +19,9 @@
 
     <nav>
         <ul>
-            <li><a href="{{ url_for('insert_ok') }}">Insérer</a></li>
-            <li><a href="{{ url_for('show_ok') }}">Voir les hoquets</a></li>
-            <li><a href="{{ url_for('show_graphics') }}">Graphiques</a></li>
+            <li><a href="{{ url_for('insert_ok') }}" class="add">Insérer</a></li>
+            <li><a href="{{ url_for('show_ok') }}" class="see">Voir les hoquets</a></li>
+            <li><a href="{{ url_for('show_graphics') }}" class="graph">Graphiques</a></li>
         </ul>
     </nav>
 
