--- a/templates/show_graphics.html
+++ b/templates/show_graphics.html
@@ -4,7 +4,7 @@
 
 <h2>Graphiques</h2>
 
-<form action="{{ url_for('show_graphics') }}" method=post>
+<form id="graphic" action="{{ url_for('show_graphics') }}" method=post>
     <label for="type">Type</label>
     <select id="type" name="graphic"><br>
         <option value="ligne">Ligne</option>
