--- a/static/style.css
+++ b/static/style.css
@@ -50,6 +50,7 @@ h1:before {
 }
 
 #main ul {
+  font-size: 0;
   margin: 75px 0;
   text-align: center;
 }
@@ -58,6 +59,7 @@ h1:before {
   border-left: 2px solid #f8b30d;
   border-right: 2px solid #f8b30d;
   display: inline-block;
+  font-size: 30px;
   margin: 0 -1px;
   padding: 0 80px 20px;
   text-transform: uppercase;
@@ -65,7 +67,6 @@ h1:before {
 
 #main li a {
   color: #434343;
-  font-size: 30px;
   text-decoration: none;
 }
 
